using-kubernates/kafka-k8s/istio.yml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: kafka-service-destination
spec:
  host: kafka-service.default.svc.cluster.local
  subsets:
    - name: v1
      labels:
        version: v1
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: kafka-service-route
spec:
  hosts:
    - kafka-service.default.svc.cluster.local
  http:
    - match:
        - headers:
            X-Version:
              exact: v1
      route:
        - destination:
            host: kafka-service.default.svc.cluster.local
            subset: v1
    - route:
        - destination:
            host: kafka-service.default.svc.cluster.local
            subset: v1
